--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@ button {
 }
 
 .pageTitle {
-  padding-top: 2%;
+  padding-top: 1%;
   margin-left: 5%;
 }
 
 .columnTitle {
-    margin-top: 4%;
+    margin-top: 2%;
     text-align: center;
   }
 
@@ -26,11 +26,11 @@ button {
   }
 
   .boxStoreStyling {
-    margin-top: 4%;
+    margin-top: 3%;
   }
 
   .storeImage {
-    margin: 4%;
+    margin: 5%;
   }
   
   /* Clear floats after the columns */
@@ -40,13 +40,43 @@ button {
     clear: both;
   }
 
-  .boxText {
-    padding: 3%;
+  .dropdownBox {
+    margin-left: 20%;
     text-align: center;
   }
 
+  .boxText {
+    padding: 2%;
+    text-align: center;
+  }
+
+  .boxSpecs {
+    margin-left: 1%;
+  }
+
+  .boxSpecsTitle {
+    padding-left: 5%;
+  }
+
   .buttonLoan {
-    margin: 5% auto;
+    margin-top: 20%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 35px;
+    width: 60%;
+    border: 1px solid #08e313;
+    border-radius: 4px;
+    background-color: #08e313;
+  }
+
+  .buttonRepayLoan {
+    margin-top: 5%;
+    margin-bottom: 2%;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -58,7 +88,9 @@ button {
   }
 
   .buttonBank {
-    margin: 3% 4.5%;
+    margin-top: 20%;
+    margin-left: 4.5%;
+    margin-right: 4.5%;
     height: 35px;
     width: 40%;
     border: 1px solid #08B2E3;
@@ -67,7 +99,9 @@ button {
   }
 
   .buttonWork {
-    margin: 3% 4.5%;
+    margin-top: 20%;
+    margin-left: 4.5%;
+    margin-right: 4.5%;
     height: 35px;
     width: 40%;
     border: 1px solid #EE6352;
@@ -76,7 +110,7 @@ button {
   }
 
   .buttonStore {
-    margin: 5% auto;
+    margin: 7.5% auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -92,4 +126,17 @@ button {
     border: 1px solid #f5f1ee;
     border-radius: 4px;
     height: auto;
+  }
+
+  .dropdownStyling {
+    margin: auto auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 35px;
+    width: 60%;
+  }
+
+  .storeImage {
+    margin: 5% 15%;
   }
